--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,5 +1,5 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["github>plugwise/renovate-config:github-actions"],
-  "ignorePaths": ["index.html", "beta/*.html", "usb_beta/*.html"]
+  "ignorePaths": ["index.html", "beta/*.html", "usb-beta/*.html"]
 }
