--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ ci:
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v4.4.0
+    rev: v4.6.0
     hooks:
       - id: check-executables-have-shebangs
         stages: [manual]
@@ -15,17 +15,18 @@ repos:
         args:
           - --branch=main
   - repo: https://github.com/adrienverge/yamllint.git
-    rev: v1.32.0
+    rev: v1.35.1
     hooks:
       - id: yamllint
         name: "Linting yaml"
-  - repo: https://github.com/pre-commit/mirrors-prettier
-    rev: v3.0.0-alpha.9-for-vscode
+  - repo: https://github.com/biomejs/pre-commit
+    rev: v0.4.0
     hooks:
-      - id: prettier
-        name: "Verifying/updating code with prettier"
+      - id: biome-lint
+        additional_dependencies: ["@biomejs/biome@1.8.3"]
+        name: "Verifying/updating code with biome (improved prettier)"
   - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.35.0
+    rev: v0.41.0
     hooks:
       - id: markdownlint
         name: "Linting Markdown"
